--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
     "nx": "16.0.1",
