Reorganisation of router package and types

--- a/packages/lib/router/package.json
+++ b/packages/lib/router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pivot/client-router",
+  "name": "@pivot/lib-router",
   "main": "./src/index.ts",
   "scripts": {
     "lint": "eslint src --config ../../../.eslintrc.json",
