--- a/apps/fixtures/package.json
+++ b/apps/fixtures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixtures",
   "scripts": {
-    "update": "ts-node -r tsconfig-paths/register ./src/main.ts"
+    "update": "ts-node -r tsconfig-paths/register ./src/main.ts && eslint ../../packages/fixtures/src  --config ../../.eslintrc.json --fix"
   }
 }
