--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nx/js": "16.0.1",
     "@nx/workspace": "16.0.1",
     "@testing-library/react": "^14.0.0",
+    "@types/eslint": "^8.37.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
     "@types/prettier": "^2.7.2",
