--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,12 @@
       "@pivot/design/react/loader": [
         "packages/design/react/loader/src/index.ts"
       ],
+      "@pivot/design/react/tag": [
+        "packages/design/react/tag/src/index.ts"
+      ],
+      "@pivot/design/react/url-input": [
+        "packages/design/react/url-input/src/index.ts"
+      ],
       "@pivot/design/variables": ["packages/design/variables/src/index.ts"],
       "@pivot/fixtures": ["packages/fixtures/src/index.ts"],
       "@pivot/hooks": ["packages/hooks/src/index.ts"],
