--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "moduleResolution": "Node",
     "noEmit": true,
     "paths": {
-      "@pivot/client/activity": ["packages/client/activity/src/index.ts"],
       "@pivot/client/auth": ["packages/client/auth/src/index.ts"],
       "@pivot/client/breadcrumb": ["packages/client/breadcrumb/src/index.ts"],
       "@pivot/client/cache": ["packages/client/cache/src/index.ts"],
@@ -38,6 +37,7 @@
       ],
       "@pivot/client/project": ["packages/client/project/src/index.ts"],
       "@pivot/client/releases": ["packages/client/releases/src/index.ts"],
+      "@pivot/client/toaster": ["packages/client/toaster/src/index.ts"],
       "@pivot/client/variables": ["packages/client/variables/src/index.ts"],
       "@pivot/client/variable-overrides": ["packages/client/variable-overrides/src/index.ts"],
       "@pivot/design/css": ["packages/design/css/src/index.ts"],
